TESB-19599 - Fix local runtime start in directory with spaces.